# iPlug2

./: .gitignore  _i_bubble_control_8h_source.html  _i_control_8cpp_source.html  _i_control_8h_source.html  _i_corner_resizer_control_8h_source.html  _i_graphics_8h_source.html  _i_graphics_cairo_8cpp_source.html  _i_graphics_i_o_s_8mm_source.html  _i_graphics_lice_8h_source.html  _i_graphics_live_edit_8h_source.html  _i_graphics_path_base_8h_source.html  _i_graphics_web_8cpp_source.html  _i_plug_a_p_p__dialog_8cpp_source.html  _i_popup_menu_control_8cpp_source.html  _test_cursor_control_8h_source.html  _test_g_l_control_8h_source.html  _test_multi_touch_control_8h_source.html  annotated.html  class_i_control.html  class_i_control__inherit__graph.map  class_i_control__inherit__graph.md5  class_i_corner_resizer_control.html  class_i_graphics-members.html  class_i_graphics.html  class_i_graphics_a_g_g-members.html  class_i_graphics_a_g_g.html  class_i_graphics_cairo-members.html  class_i_graphics_cairo.html  class_i_graphics_canvas-members.html  class_i_graphics_canvas.html  class_i_graphics_lice-members.html  class_i_graphics_lice.html  class_i_graphics_live_edit.html  class_i_graphics_nano_v_g-members.html  class_i_graphics_nano_v_g.html  class_i_graphics_path_base-members.html  class_i_graphics_path_base.html  class_i_graphics_skia-members.html  class_i_graphics_skia.html  class_i_popup_menu_control.html  (+22 more)
Dependencies/: meson.build
Dependencies/IGraphics/: meson.build
Dependencies/IPlug/: meson.build
Dependencies/IPlug/RTAudio/: meson.build
Dependencies/IPlug/RTAudio/include/: meson.build
Dependencies/IPlug/RTMidi/: meson.build
Dependencies/IPlug/VST3_SDK/: config.sh  meson.build  readme.org
Examples/IPlugEffect/: IPlugEffect.cpp
Examples/IPlugEffect/config/: IPlugEffect-mac.xcconfig
Examples/IPlugEffect/projects/IPlugEffect-iOS.xcodeproj/xcshareddata/xcschemes/: iOS-APP with AUv3.xcscheme
Examples/IPlugWebUI/: IPlugWebUI.cpp  README.md
Examples/IPlugWebUI/config/: IPlugWebUI-mac.xcconfig
Examples/IPlugWebUI/projects/: IPlugWebUI-aax.vcxproj  IPlugWebUI-aax.vcxproj.filters  IPlugWebUI-vst2.vcxproj  IPlugWebUI-vst2.vcxproj.filters  IPlugWebUI-vst3.vcxproj  IPlugWebUI-vst3.vcxproj.filters
Examples/IPlugWebUI/projects/IPlugWebUI-iOS.xcodeproj/: project.pbxproj
Examples/IPlugWebUI/projects/IPlugWebUI-iOS.xcodeproj/xcshareddata/xcschemes/: iOS-APP with AUv3.xcscheme
Examples/IPlugWebUI/projects/IPlugWebUI-macOS.xcodeproj/: project.pbxproj
Examples/IPlugWebUI/resources/: IPlugWebUI-AU-Info.plist  IPlugWebUI-VST2-Info.plist  IPlugWebUI-VST3-Info.plist  IPlugWebUI-iOS-AUv3-Info.plist  IPlugWebUI-macOS-AUv3-Info.plist  IPlugWebUI-macOS-Info.plist  main.rc_mac_dlg
Examples/IPlugWebUI/resources/web/: script.js
Examples/IPlugWebView/config/: IPlugWebView-mac.xcconfig
IGraphics/: IGraphics.cpp  IGraphics.h  IGraphicsStructs.h  meson.build
IGraphics/Controls/: IControls.cpp  IWebViewControl.h  meson.build
IGraphics/Drawing/: IGraphicsNanoVG.cpp  meson.build
IGraphics/Extras/: meson.build
IPlug/: IPlugAPIBase.cpp  IPlugEditorDelegate.h  IPlugPaths.cpp  IPlug_include_in_plug_src.h  dev.org  meson.build
IPlug/APP/: IPlugAPP_dialog.cpp  meson.build
IPlug/Extras/: meson.build
IPlug/Extras/WebView/: IPlugWebView.cpp  IPlugWebView.h  IPlugWebView.mm  IPlugWebViewEditorDelegate.cpp  IPlugWebViewEditorDelegate.h  IPlugWebViewEditorDelegate.mm
IPlug/ReaperExt/: ReaperExtBase.cpp  ReaperExt_include_in_plug_src.h
IPlug/VST2/: IPlugVST2.cpp
IPlug/VST3/: IPlugVST3.cpp  IPlugVST3.h  IPlugVST3_Processor.cpp  IPlugVST3_View.h  meson.build
WDL/: meson.build
WDL/swell/: meson.build
search/: all_10.js  all_3.js  all_8.js  classes_5.js  functions_3.js  functions_c.js  functions_e.js
