includes += include_directories('.')

if igraphics.contains('IGRAPHICS_NANOVG')
  # about IGraphicsNanoVG.cpp

  # iPlug2/IGraphics/Platforms/IGraphicsWin.cpp
  # has
  #.. if defined IGRAPHICS_NANOVG
  #include "IGraphicsNanoVG.cpp"

  # sources += files('IGraphicsNanoVG.cpp')

  # btw, this gave me a massive headache with project not building! argh
endif
