includes += include_directories('.')

sources += files(
  'IPlugVST3.cpp',
  'IPlugVST3_ProcessorBase.cpp',

  # from linux branch
  'IPlugVST3_RunLoop.cpp',

  # the following 2 are not stated in the IPlugControls project
  # 'IPlugVST3_Controller.cpp',
  # 'IPlugVST3_Processor.cpp',
)
