includes += include_directories('.')

sources += files(
'swell-appstub-generic.cpp',
 'swell-dlg-generic.cpp',
 'swell-gdi-generic.cpp',
 'swell-gdi-lice.cpp',
 'swell-generic-gdk.cpp',
 'swell-generic-headless.cpp',
 'swell-ini.cpp',
 'swell-kb-generic.cpp',
 'swell-menu-generic.cpp',
 'swell-misc-generic.cpp',
 'swell-miscdlg-generic.cpp',
 'swell-modstub-generic.cpp',
 'swell-wnd-generic.cpp',
 'swell.cpp',
 # 'test.cpp',

  )
